--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "async": "1.x.x",
-    "bcrypt": "0.8.x",
+    "bcryptjs": "*",
     "body-parser": "1.x.x",
+    "chart.js": "^2.1.4",
     "compression": "1.x.x",
     "connect-mongo": "1.x.x",
     "cookie-parser": "1.x.x",
     "csurf": "1.x.x",
+    "dotenv": "^2.0.0",
     "emailjs": "1.x.x",
     "express": "4.13.x",
     "express-session": "1.x.x",
@@ -26,6 +28,7 @@
     "method-override": "2.x.x",
     "mongoose": "4.x.x",
     "morgan": "1.x.x",
+    "nodemon": "^1.9.2",
     "passport": "0.3.x",
     "passport-facebook": "2.x.x",
     "passport-github": "1.x.x",
@@ -34,6 +37,7 @@
     "passport-oauth": "1.x.x",
     "passport-tumblr": "0.1.x",
     "passport-twitter": "1.x.x",
+    "random-js": "^1.0.8",
     "serve-static": "1.10.x",
     "underscore": "1.x.x"
   },
