--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "random-js": "^1.0.8",
     "serve-static": "1.10.x",
     "underscore": "1.x.x",
-    "backbone": "1.x.x",
     "bootstrap": "3.x.x",
-    "font-awesome": "4.x.x",
+    "font-awesome": "4.x.x"
+  },
+  "devDependencies": {
+    "backbone": "1.x.x",
     "grunt": "1.x.x",
     "grunt-cli": "1.x.x",
     "grunt-concurrent": "2.x.x",
@@ -54,13 +56,10 @@
     "grunt-contrib-watch": "1.x.x",
     "grunt-newer": "1.x.x",
     "grunt-nodemon": "0.4.x",
-    "html5shiv": "3.x.x",
+    "html5shiv": "3.x.x",    
     "jquery": "2.x.x",
-    "jquery.cookie": "1.x.x",
+    "jquery.cookie": "1.x.x", 
     "moment": "2.13.x",
     "respond.js": "1.x.x"    
-  },
-  "devDependencies": {
-
   }
 }
