--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 public/vendor/*
 ; node_modules/*
-*.min.js
-*.min.js.map
-*.min.css
+; *.min.js
+; *.min.js.map
+; *.min.css
 .nodemonignore
 .gitignore
 .env
